# Vigilyx

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  README.md  SECURITY.md  deploy.conf.example  deploy.sh  start.sh
.cargo/: config.toml
.github/: pull_request_template.md
crates/vigilyx-api/: Cargo.toml
crates/vigilyx-api/src/: db.rs  error_codes.rs  main.rs  metrics.rs  routes.rs  state.rs  trace_id.rs
crates/vigilyx-api/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs  rate_limit.rs  ws_ticket.rs
crates/vigilyx-api/src/handlers/: audit.rs  data_security.rs  database.rs  deployment_mode.rs  health.rs  ioc_handlers.rs  mod.rs  sessions.rs  setup_status.rs  stats.rs  syslog_config.rs  system.rs  training.rs  ui_preferences.rs  yara.rs
crates/vigilyx-api/src/handlers/security/: alerts.rs  disposition.rs  mod.rs  pipeline.rs  quarantine.rs  rescan.rs  sniffer_config.rs  threat_scene.rs  verdict.rs  whitelist.rs
crates/vigilyx-api/src/websocket/: mod.rs
crates/vigilyx-core/: Cargo.toml
crates/vigilyx-core/src/: config.rs  error.rs  lib.rs  magic_bytes.rs  ssrf.rs
crates/vigilyx-core/src/models/: mod.rs
crates/vigilyx-core/src/security/: mod.rs
crates/vigilyx-core/tests/: property_tests.rs
crates/vigilyx-db/: Cargo.toml
crates/vigilyx-db/src/: error.rs  lib.rs
crates/vigilyx-db/src/infra/: audit.rs  config.rs  maintenance.rs  migrate.rs  mod.rs  pool.rs  session.rs  typed_config.rs
crates/vigilyx-db/src/mq/: channels.rs  client.rs  error.rs  mod.rs  reload_protocol.rs  stream.rs  uds.rs
crates/vigilyx-db/src/security/: alert.rs  config.rs  data_security.rs  disposition.rs  feedback.rs  ioc.rs  migrate.rs  mod.rs  quarantine.rs  temporal.rs  threat_scene.rs  training.rs  verdict.rs  whitelist.rs  yara.rs
crates/vigilyx-engine/: Cargo.toml
crates/vigilyx-engine/src/: db_service.rs  error.rs  feedback.rs  lib.rs  module.rs  module_data.rs  syslog.rs  threat_scene.rs  whitelist.rs
crates/vigilyx-engine/src/data_security/: chunked_upload.rs  coremail.rs  document_extract.rs  draft_detect.rs  engine.rs  file_transit_detect.rs  jrt.rs  jrt_compliance.rs  mod.rs  self_send_detect.rs  time_policy.rs  volume_anomaly.rs
crates/vigilyx-engine/src/data_security/dlp/: finders.rs  mod.rs  normalize.rs  patterns.rs  tests.rs
crates/vigilyx-engine/src/fusion/: bpa.rs  engine_map.rs  grouped_fusion.rs  mod.rs  murphy.rs  robustness.rs  tbm.rs
crates/vigilyx-engine/src/intel/: mod.rs  sources.rs
crates/vigilyx-engine/src/ioc/: auto_record.rs  mod.rs
crates/vigilyx-engine/src/modules/: aitm_detect.rs  anomaly_detect.rs  attach_content.rs  attach_hash.rs  attach_qr_scan.rs  attach_scan.rs  av_attach_scan.rs  av_eml_scan.rs  common.rs  domain_verify.rs  header_scan.rs  html_pixel_art.rs  html_scan.rs  identity_anomaly.rs  landing_page_scan.rs  link_content.rs  link_scan.rs  mime_scan.rs  mod.rs  registry.rs  sandbox_scan.rs  semantic_scan.rs  transaction_correlation.rs  verdict_module.rs  yara_scan.rs
crates/vigilyx-engine/src/modules/content_scan/: detectors.rs  html_utils.rs  mod.rs  tests.rs
crates/vigilyx-engine/src/modules/header_scan/: checks.rs  intel.rs  mod.rs  parsed.rs
crates/vigilyx-engine/src/modules/link_reputation/: data.rs  heuristics.rs  mod.rs
crates/vigilyx-engine/src/monitoring/: alert.rs  metrics.rs  mod.rs
crates/vigilyx-engine/src/pipeline/: config.rs  context.rs  engine.rs  internal_domains.rs  mod.rs  orchestrator.rs  post_verdict.rs
crates/vigilyx-engine/src/pipeline/verdict/: clustered_ds_v1.rs  ds_murphy.rs  evidence_clusters.rs  mod.rs  noisy_or.rs  tbm.rs  weighted_max.rs
crates/vigilyx-engine/src/temporal/: comm_graph.rs  cusum.rs  dual_ewma.rs  entity_risk.rs  hawkes.rs  hmm_attack_phase.rs  mod.rs  temporal_analyzer.rs
crates/vigilyx-engine/src/yara/: engine.rs  mod.rs  rules.rs
crates/vigilyx-engine/tests/: property_tests.rs
crates/vigilyx-mta/: Cargo.toml
crates/vigilyx-mta/src/: config.rs  dlp.rs  envelope.rs  lib.rs  main.rs
crates/vigilyx-mta/src/relay/: downstream.rs  mod.rs  quarantine.rs
crates/vigilyx-mta/src/server/: connection.rs  listener.rs  mod.rs  tls.rs
crates/vigilyx-parser/: Cargo.toml
crates/vigilyx-parser/src/: lib.rs  mime.rs  smtp.rs  smtp_state.rs
crates/vigilyx-sniffer/: Cargo.toml
crates/vigilyx-sniffer/src/: main.rs  zerocopy.rs
crates/vigilyx-sniffer/src/capture/: bpf.rs  mod.rs  packet_parser.rs  port_bitmap.rs  publisher.rs
crates/vigilyx-sniffer/src/parser/: file_protocol.rs  http.rs  http_state.rs  imap.rs  mod.rs  pcapng.rs  pop3.rs
crates/vigilyx-sniffer/src/session/: cleanup.rs  http_helpers.rs  http_parse.rs  mod.rs  rate_limit.rs  sid_mapping.rs  smtp_diag.rs  smtp_process.rs  smtp_relay.rs  stats.rs  tests.rs  types.rs
crates/vigilyx-sniffer/src/stream/: mod.rs
crates/vigilyx-soar/: Cargo.toml
crates/vigilyx-soar/src/: config.rs  lib.rs
crates/vigilyx-soar/src/alert/: gpd.rs  impact.rs  mod.rs
crates/vigilyx-soar/src/disposition/: email_alert.rs  mod.rs  webhook.rs  wechat_alert.rs
deploy/: email-capture.sh
docs/: DEPLOYMENT.md  ENGINE_A_SENDER_REPUTATION.md  MODEL_TECHNICAL_FRAMEWORK.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
python/: pyproject.toml
python/tests/: conftest.py  test_api_endpoints.py  test_api_health.py  test_model_manager_state.py  test_nlp_core.py  test_nlp_interpret.py  test_prompts.py  test_threat_analyzer.py  test_trainer_utils.py  test_vt_scraper_pure.py
python/vigilyx_ai/: __init__.py  api.py  models.py  nlp_phishing.py  scraper.py  trainer.py  vt_models.py
python/vigilyx_ai/analyzers/: __init__.py  base.py  threat.py
python/vigilyx_ai/llm/: __init__.py  client.py  prompts.py
scripts/: apply-capture-host-tuning.sh  check-frontend-toolchain.sh  generate-secrets.sh  generate-tls-cert.sh  generate_keyword_seed.py  generate_social_assets.py  insert_yara_rules.py  migrate_sqlite_to_pg.py  repair-opencode-session.sh  seed_custom_yara.sql  switch-mode.sh  virus_total.py
site/: index.md  package-lock.json  (+1 more)
(+150 files in other folders)
