[project]
name = "vigilyx-ai"
version = "0.9.0"
description = "Vigilyx AI 分析模块 - NLP 钓鱼检测 + 邮件威胁分析"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "Vigilyx Team"}
]
keywords = ["email-security", "phishing-detection", "nlp", "threat-analysis"]
dependencies = [
    "redis==5.0.0",
    "pydantic==2.0.3",           # FastAPI 0.115 excludes 2.0.0/2.0.1
    "httpx==0.27.0",
    "anthropic==0.40.0",        # Claude API
    "openai==1.50.0",            # OpenAI API (可选)
    "fastapi==0.115.0",          # HTTP API 服务
    "uvicorn==0.32.0",           # ASGI 服务器
    "structlog==24.1.0",         # 结构化日志 (24.0.0 不存在于 PyPI)
    "playwright==1.51.0",        # VT 页面抓取 (无头浏览器, 1.51 fixes CVE-2025-59288)
    "transformers==4.40.0",      # HuggingFace Transformer (NLP 钓鱼检测)
    "torch==2.6.0",              # PyTorch (Transformer 推理后端, 2.6 fixes CVE-2025-32434)
    "peft==0.13.0",              # LoRA 参数高效微调
    "accelerate==0.34.0",        # HuggingFace Trainer + PEFT 依赖
    "sentencepiece==0.2.0",      # DeBERTa tokenizer 依赖
    "numpy<2.0",                 # transformers 4.40 uses numpy.core.numeric.ComplexWarning removed in numpy 2
    "scikit-learn==1.3.0",       # K-Fold CV 评估指标 (balanced_accuracy, f1)
    "psutil==5.9.0",             # 系统资源检测 (内存大小自适应训练参数)
]

[project.urls]
Homepage = "https://github.com/DoHeras/Vigilyx"
Repository = "https://github.com/DoHeras/Vigilyx"

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.24.0",
    "ruff==0.7.0",
    "mypy==1.13.0",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: pure unit tests (no ML models)",
    "integration: tests requiring model loading or network",
]

[tool.mypy]
python_version = "3.10"
strict = true
